src/objects/IT_Level__c.object
<CustomObject>
    <fields>
        <fullName>IT_Circuit_Code__c</fullName>
        <externalId>true</externalId>
        <label>Circuit Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Parametral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Circuit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circuit</label>
        <referenceTo>IT_Circuit__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Client_Code__c</fullName>
        <externalId>true</externalId>
        <label>Client Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Employee_Type__c</fullName>
        <label>Employee Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_1_Description__c</fullName>
        <label>Level 1 Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_1__c</fullName>
        <label>Level 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_2_Description__c</fullName>
        <label>Level 2 Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_2__c</fullName>
        <label>Level 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_3__c</fullName>
        <label>Level 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Particular_Client_Code__c</fullName>
        <label>Particular Client Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Service_Type__c</fullName>
        <label>Service Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Service__c</fullName>
        <label>Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>